--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Ledger | Smart Hub</title>
+    <title>The Ledger | Ultimate</title>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2098/2098402.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -31,7 +31,6 @@
         #calendarContainer { touch-action: pan-y; }
         .undo-redo-container { position: absolute; top: 16px; right: 16px; display: flex; gap: 12px; }
         .history-btn { font-size: 20px; cursor: pointer; opacity: 0.6; }
-        .history-btn:hover { opacity: 1; }
     </style>
 </head>
 <body class="p-4 pb-24">
@@ -42,8 +41,8 @@
         </header>
 
         <div class="undo-redo-container">
-            <button onclick="undo()" class="history-btn" title="Undo">↺</button>
-            <button onclick="redo()" class="history-btn" title="Redo">↻</button>
+            <button onclick="undo()" class="history-btn">↺</button>
+            <button onclick="redo()" class="history-btn">↻</button>
         </div>
 
         <div id="pinContainer" class="hidden mb-6 bg-blue-600 text-white p-4 rounded-xl shadow-lg text-center">
@@ -102,7 +101,6 @@
                 <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Founder & Architect</p>
                 <p class="text-sm font-black text-blue-600 uppercase">Omkar Gorakhnath Sathe</p>
                 <p class="text-[10px] text-slate-500 font-medium italic mt-1">"Smart scheduling starts here"</p>
-                <p class="text-[8px] text-slate-300 italic mt-2">Built for CA Aspirants & Commerce Professionals</p>
             </div>
 
             <button onclick="downloadReadableData()" class="w-full bg-slate-900 text-white py-3 rounded-xl text-[10px] font-bold uppercase tracking-widest mt-2">📥 Download List Document</button>
@@ -123,8 +121,6 @@
         let curDate = new Date();
         let selDate = new Date().toISOString().split('T')[0];
         let activeTab = 'tasks';
-
-        // UNDO/REDO LOGIC
         let history = [JSON.stringify(db)];
         let historyIndex = 0;
 
@@ -140,19 +136,12 @@
         function undo() { if (historyIndex > 0) { historyIndex--; db = JSON.parse(history[historyIndex]); save(false); } }
         function redo() { if (historyIndex < history.length - 1) { historyIndex++; db = JSON.parse(history[historyIndex]); save(false); } }
 
-        // SWIPE
         let tsX = 0; let teX = 0;
         const calArea = document.getElementById('calendarContainer');
         calArea.addEventListener('touchstart', e => { tsX = e.changedTouches[0].screenX; }, false);
         calArea.addEventListener('touchend', e => { teX = e.changedTouches[0].screenX; if(teX < tsX - 50) changeMonth(1); if(teX > tsX + 50) changeMonth(-1); }, false);
 
-        function save(record = true) { 
-            if(record) recordAction();
-            localStorage.setItem(KEY, JSON.stringify(db)); 
-            renderCalendar(); 
-            updateDashboard(); 
-            if(activeTab === 'intel') renderIntel(); 
-        }
+        function save(record = true) { if(record) recordAction(); localStorage.setItem(KEY, JSON.stringify(db)); renderCalendar(); updateDashboard(); if(activeTab === 'intel') renderIntel(); }
 
         function showScreen(s) {
             activeTab = s;
@@ -220,7 +209,6 @@
         function inlineEditTask(i, btn) { const p = btn.parentElement.parentElement.querySelector('p'); const old = db.tasks[selDate][i].text; p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eTask">`; const input = document.getElementById('eTask'); focusAtEnd(input); input.onblur = () => { if(input.value) db.tasks[selDate][i].text = input.value; save(); }; input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); }; }
         function inlineEditEvent(i, btn) { const p = btn.parentElement.parentElement.querySelector('span'); const old = db.events[selDate][i]; p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eEvent">`; const input = document.getElementById('eEvent'); focusAtEnd(input); input.onblur = () => { if(input.value) db.events[selDate][i] = input.value; save(); }; input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); }; }
         function inlineEditCD(name, date, btn) { const p = btn.parentElement.parentElement.querySelector('p'); p.innerHTML = `<input type="text" class="edit-input" value="${name}" id="eExam">`; const input = document.getElementById('eExam'); focusAtEnd(input); input.onblur = () => { if(input.value) db.exams.find(ex=>ex.name===name&&ex.date===date).name = input.value; save(); }; input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); }; }
-        
         function handleEntry(e, type) { if(e.key==='Enter' && e.target.value) { if(type==='task'){ if(!db.tasks[selDate])db.tasks[selDate]=[]; db.tasks[selDate].push({text:e.target.value, done:false}); } else if(type==='exam'){ db.exams.push({name:e.target.value, date:selDate}); } else if(type==='event'){ if(!db.events[selDate])db.events[selDate]=[]; db.events[selDate].push(e.target.value); } e.target.value=''; save(); } }
         function saveDiary() { db.diaries[selDate] = document.getElementById('diaryBox').value; save(); }
         function delTask(i) { db.tasks[selDate].splice(i,1); save(); }
@@ -228,33 +216,9 @@
         function delEvent(i) { db.events[selDate].splice(i,1); save(); }
         function delDiary() { delete db.diaries[selDate]; save(); }
         function toggleTask(i) { db.tasks[selDate][i].done = !db.tasks[selDate][i].done; save(); }
-        
-        function renderIntel() { 
-            const today=new Date().toISOString().split('T')[0];
-            let tc=0; Object.values(db.tasks).forEach(d=>d.forEach(t=>{if(!t.done)tc++;}));
-            document.getElementById('statTasks').innerText=tc;
-            document.getElementById('statExams').innerText=db.exams.filter(ex=>ex.date>=today).length;
-            let ec=0; Object.values(db.events).forEach(d=>ec+=d.length);
-            document.getElementById('statEvents').innerText=ec;
-            document.getElementById('statDiaries').innerText=Object.keys(db.diaries).length;
-        }
-
-        function showIntelDetail(type) {
-            const list = document.getElementById('intelDetailList'); list.innerHTML = `<h4 class="text-[10px] font-black uppercase text-slate-500 mb-2">${type} List</h4>`;
-            if(type==='tasks') Object.keys(db.tasks).forEach(d=>db.tasks[d].forEach(t=>list.innerHTML += `<div class="bg-white p-2 text-xs border rounded mb-1 flex justify-between"><span>${t.text}</span><span class="opacity-40">${d}</span></div>`));
-            else if(type==='exams') db.exams.sort((a,b)=>new Date(a.date)-new Date(b.date)).forEach(ex=>list.innerHTML += `<div class="bg-red-50 p-2 text-xs border border-red-100 rounded mb-1 flex justify-between"><span>${ex.name}</span><span class="font-bold">${ex.date}</span></div>`);
-            else if(type==='events') Object.keys(db.events).forEach(d=>db.events[d].forEach(e=>list.innerHTML += `<div class="bg-green-50 p-2 text-xs border border-green-100 rounded mb-1 flex justify-between"><span>${e}</span><span class="opacity-40">${d}</span></div>`));
-            else if(type==='diary') Object.keys(db.diaries).forEach(d=>list.innerHTML += `<div class="bg-yellow-50 p-2 text-xs border border-yellow-100 rounded mb-1"><b>${d}:</b> ${db.diaries[d]}</div>`);
-        }
-
-        function pinItem(t,c,d) { 
-            const m=["JAN","FEB","MAR","APR","MAY","JUN","JUL","AUG","SEP","OCT","NOV","DEC"]; 
-            const dt=new Date(d); 
-            const diff = Math.ceil((dt - new Date()) / 86400000); 
-            const countdownText = diff >= 0 ? `: ${diff} DAYS LEFT` : ''; 
-            db.pin={type:`${m[dt.getMonth()]} ${dt.getDate()} - ${t}${countdownText}`, content:c}; save(); 
-        }
-
+        function renderIntel() { const today=new Date().toISOString().split('T')[0]; let tc=0; Object.values(db.tasks).forEach(d=>d.forEach(t=>{if(!t.done)tc++;})); document.getElementById('statTasks').innerText=tc; document.getElementById('statExams').innerText=db.exams.filter(ex=>ex.date>=today).length; let ec=0; Object.values(db.events).forEach(d=>ec+=d.length); document.getElementById('statEvents').innerText=ec; document.getElementById('statDiaries').innerText=Object.keys(db.diaries).length; }
+        function showIntelDetail(type) { const list = document.getElementById('intelDetailList'); list.innerHTML = `<h4 class="text-[10px] font-black uppercase text-slate-500 mb-2">${type} List</h4>`; if(type==='tasks') Object.keys(db.tasks).forEach(d=>db.tasks[d].forEach(t=>list.innerHTML += `<div class="bg-white p-2 text-xs border rounded mb-1 flex justify-between"><span>${t.text}</span><span class="opacity-40">${d}</span></div>`)); else if(type==='exams') db.exams.sort((a,b)=>new Date(a.date)-new Date(b.date)).forEach(ex=>list.innerHTML += `<div class="bg-red-50 p-2 text-xs border border-red-100 rounded mb-1 flex justify-between"><span>${ex.name}</span><span class="font-bold">${ex.date}</span></div>`); else if(type==='events') Object.keys(db.events).forEach(d=>db.events[d].forEach(e=>list.innerHTML += `<div class="bg-green-50 p-2 text-xs border border-green-100 rounded mb-1 flex justify-between"><span>${e}</span><span class="opacity-40">${d}</span></div>`); else if(type==='diary') Object.keys(db.diaries).forEach(d=>list.innerHTML += `<div class="bg-yellow-50 p-2 text-xs border border-yellow-100 rounded mb-1"><b>${d}:</b> ${db.diaries[d]}</div>`); }
+        function pinItem(t,c,d) { const m=["JAN","FEB","MAR","APR","MAY","JUN","JUL","AUG","SEP","OCT","NOV","DEC"]; const dt=new Date(d); const diff = Math.ceil((dt - new Date()) / 86400000); const countdownText = diff >= 0 ? `: ${diff} DAYS LEFT` : ''; db.pin={type:`${m[dt.getMonth()]} ${dt.getDate()} - ${t}${countdownText}`, content:c}; save(); }
         function clearPin() { db.pin=null; save(); }
         function renderPin() { const c=document.getElementById('pinContainer'); if(db.pin){ c.classList.remove('hidden'); document.getElementById('pinLabel').innerText=db.pin.type; document.getElementById('pinContent').innerText=db.pin.content; } else c.classList.add('hidden'); }
         function changeMonth(o){ curDate.setMonth(curDate.getMonth()+o); renderCalendar(); }
